refactor(LottoController): 외부에서 LottosGenerator 주입으로 변경
- RandomLottosGenerator generateLottos 함수 인자로 purchaseAmount 받음